<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('trips', function (Blueprint $table) {
            $table->id();
            $table->foreignId('truck_id')->constrained()->cascadeOnDelete();
            $table->enum('status', ['STARTED', 'ARRIVED_PORT', 'LEFT_PORT', 'COMPLETED'])->default('STARTED')->index();
            $table->boolean('is_active')->nullable()->default(true);
            $table->timestamp('started_at')->nullable();
            $table->timestamp('arrived_port_at')->nullable();
            $table->timestamp('left_port_at')->nullable();
            $table->timestamp('completed_at')->nullable();
            $table->timestamps();

            $table->unique(['truck_id', 'is_active']);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('trips');
    }
};
